Added EmerCoin TLDs

--- a/html/index.html
+++ b/html/index.html
@@ -20,6 +20,7 @@
 		<li><a href="/tier1s.html">Tier1s</a> <sup><a href="/tier1s.json">json</a></sup></li>
 		<li><a href="/tlds.html">TLDs</a> <sup><a href="/tlds.json">json</a></sup></li>
 		<li><a href="/newnationstlds.html">New-Nations TLDs</a> <sup><a href="/newnationstlds.json">json</a></sup></li>
+		<li><a href="/emercointlds.html">EmerCoin TLDs</a> <sup><a href="/emercointlds.json">json</a></sup></li>
 	</ul>
 	<h2>OpenNIC JSON API</h2>
 
